[project]
name = "comfyui-seam-carving"
description = "Nodes: Image Resize (seam carving). Seam carving (image resize) for ComfyUI. Based on [a/https://github.com/li-plus/seam-carving](https://github.com/li-plus/seam-carving). With seam carving algorithm, the image could be intelligently resized while keeping the important contents undistorted. The carving process could be further guided, so that an object could be removed from the image without apparent artifacts."
version = "1.0.0"
license = "LICENSE"
dependencies = ["seam-carving"]

[project.urls]
Repository = "https://github.com/spinagon/ComfyUI-seam-carving"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-seam-carving"
Icon = ""
